--- a/package.json
+++ b/package.json
@@ -7,21 +7,12 @@
     "license": "MIT",
     "scripts": {
         "build": "nest build",
-        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
         "watch": "nest start --watch",
         "start:debug": "nest start --debug --watch",
-        "start:prod": "node dist/main.js",
-        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:cov": "jest --coverage",
-        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "start:prod": "node dist/main.js"
     },
     "dependencies": {
-        "@aws-sdk/client-cognito-identity-provider": "^3.620.0",
-        "@aws-sdk/client-ses": "^3.624.0",
         "@nestjs/cache-manager": "^2.2.2",
         "@nestjs/common": "^10.0.0",
         "@nestjs/config": "^3.2.3",
@@ -29,7 +20,6 @@
         "@nestjs/mongoose": "^10.0.10",
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/schedule": "^4.1.0",
-        "aws-jwt-verify": "^4.0.1",
         "axios": "^1.7.2",
         "bcrypt": "^5.1.1",
         "cache-manager": "^5.7.6",
@@ -64,22 +54,5 @@
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.1.3"
-    },
-    "jest": {
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "ts"
-        ],
-        "rootDir": "src",
-        "testRegex": ".*\\.spec\\.ts$",
-        "transform": {
-            "^.+\\.(t|j)s$": "ts-jest"
-        },
-        "collectCoverageFrom": [
-            "**/*.(t|j)s"
-        ],
-        "coverageDirectory": "../coverage",
-        "testEnvironment": "node"
     }
 }
