--- a/package.json
+++ b/package.json
@@ -1,58 +1,38 @@
 {
-    "name": "series-alert",
-    "version": "0.0.1",
+    "name": "tv-gumshoe-server",
+    "version": "1.0.0",
     "description": "Delivers series information alerts via email.",
-    "author": "Joseph Perez",
-    "private": true,
-    "license": "MIT",
+    "main": "src/index.ts",
     "scripts": {
-        "build": "nest build",
-        "start": "nest start",
-        "watch": "nest start --watch",
-        "start:debug": "nest start --debug --watch",
-        "start:prod": "node dist/main.js"
+        "start": "node dist/index.js",
+        "build": "tsc",
+        "watch": "nodemon --watch src --exec ts-node src/index.ts",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "author": "Joseph Perez",
+    "license": "MIT",
     "dependencies": {
-        "@nestjs/cache-manager": "^2.2.2",
-        "@nestjs/common": "^10.0.0",
-        "@nestjs/config": "^3.2.3",
-        "@nestjs/core": "^10.0.0",
-        "@nestjs/mongoose": "^10.0.10",
-        "@nestjs/platform-express": "^10.0.0",
-        "@nestjs/schedule": "^4.1.0",
-        "axios": "^1.7.2",
+        "axios": "^1.7.7",
         "bcrypt": "^5.1.1",
-        "cache-manager": "^5.7.6",
-        "mongoose": "^8.5.1",
-        "nodemailer": "^6.9.14",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "mongoose": "^8.6.1",
+        "node-cache": "^5.1.2",
+        "node-cron": "^3.0.3",
+        "nodemailer": "^6.9.15",
         "p-limit": "3.1.0",
-        "reflect-metadata": "^0.2.0",
-        "rxjs": "^7.8.1"
+        "ts-node": "^10.9.2"
     },
     "devDependencies": {
-        "@nestjs/cli": "^10.0.0",
-        "@nestjs/schematics": "^10.0.0",
-        "@nestjs/testing": "^10.0.0",
         "@types/bcrypt": "^5.0.2",
-        "@types/cron": "^2.0.1",
-        "@types/express": "^4.17.17",
-        "@types/jest": "^29.5.2",
-        "@types/node": "^20.3.1",
+        "@types/cors": "^2.8.17",
+        "@types/dotenv": "^6.1.1",
+        "@types/express": "^4.17.21",
+        "@types/node-cron": "^3.0.11",
         "@types/nodemailer": "^6.4.15",
-        "@types/supertest": "^6.0.0",
-        "@typescript-eslint/eslint-plugin": "^7.0.0",
-        "@typescript-eslint/parser": "^7.0.0",
-        "eslint": "^8.42.0",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-plugin-prettier": "^5.0.0",
-        "jest": "^29.5.0",
-        "prettier": "^3.0.0",
-        "source-map-support": "^0.5.21",
-        "supertest": "^7.0.0",
-        "ts-jest": "^29.1.0",
-        "ts-loader": "^9.4.3",
-        "ts-node": "^10.9.1",
-        "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.1.3"
+        "@types/p-limit": "^2.1.0",
+        "nodemon": "^3.1.4",
+        "typescript": "^5.5.4"
     }
 }
